--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -16,20 +16,19 @@
 			<smartFilterBar:SmartFilterBar id="smartFilterBar" entitySet="ZI_MANDREQ_HDR" persistencyKey="SmartFilter_Explored" 
 				basicSearchFieldName="Status" enableBasicSearch="false" >
 				
-				<!--<smartFilterBar:controlConfiguration>-->
-				<!--	<smartFilterBar:ControlConfiguration key="Status">-->
-				<!--	<smartFilterBar:defaultFilterValues>-->
-				<!--			<smartFilterBar:SelectOption low="0001">-->
-				<!--			</smartFilterBar:SelectOption>-->
-				<!--		</smartFilterBar:defaultFilterValues>-->
-				<!--	</smartFilterBar:ControlConfiguration>-->
-				<!--	<smartFilterBar:ControlConfiguration key="Gjahr">-->
-				<!--		<smartFilterBar:defaultFilterValues>-->
-				<!--				<smartFilterBar:SelectOption low="2014">-->
-				<!--				</smartFilterBar:SelectOption>-->
-				<!--			</smartFilterBar:defaultFilterValues>-->
-				<!--		</smartFilterBar:ControlConfiguration>-->
-				<!--</smartFilterBar:controlConfiguration>-->
+				<smartFilterBar:controlConfiguration>
+					<smartFilterBar:ControlConfiguration id="Reqno" key="Reqno" visibleInAdvancedArea="true">
+						
+					</smartFilterBar:ControlConfiguration>
+					<smartFilterBar:ControlConfiguration id="Status" key="Status" visibleInAdvancedArea="true">
+						<smartFilterBar:defaultFilterValues>
+							<smartFilterBar:SelectOption low="NEW">
+							</smartFilterBar:SelectOption>
+						</smartFilterBar:defaultFilterValues>
+					</smartFilterBar:ControlConfiguration>
+					
+					
+				</smartFilterBar:controlConfiguration>
 				<!-- layout data used to make the table growing but the filter bar fixed -->
 				<smartFilterBar:layoutData>
 					<FlexItemData shrinkFactor="0"/>
