--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,21 +1,12 @@
-<mvc:View
-	controllerName="sio.hcm.mandate.controller.App"
-	displayBlock="true"
-	height="100%"
-	xmlns="sap.m"
-	xmlns:f="sap.f"
+<mvc:View controllerName="sio.hcm.mandate.controller.App" displayBlock="true" height="100%" xmlns="sap.m" xmlns:f="sap.f"
 	xmlns:mvc="sap.ui.core.mvc">
-	<App
-		id="app"
-		busy="{appView>/busy}"
-		busyIndicatorDelay="{appView>/delay}">
-		<!--<Page id="layout">-->
-			
-		<!--</Page>-->
-		<f:FlexibleColumnLayout
-			id="layout"
-			layout="{appView>/layout}"
-			backgroundDesign="Translucent">
-		</f:FlexibleColumnLayout>
+	<!--<Shell>-->
+	<App id="app" busy="{appView>/busy}" busyIndicatorDelay="{appView>/delay}">
+		<!--<f:FlexibleColumnLayout-->
+		<!--	id="layout"-->
+		<!--	layout="{appView>/layout}"-->
+		<!--	backgroundDesign="Translucent">-->
+		<!--</f:FlexibleColumnLayout>-->
 	</App>
+	<!--</Shell>-->
 </mvc:View>
