--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -44,7 +44,7 @@
 			<smartTable:SmartTable id="smartTable" entitySet="ZI_MANDREQ_HDR" smartFilterId="smartFilterBar" tableType="ResponsiveTable"
 				useExportToExcel="true" beforeExport="onBeforeExport" useTablePersonalisation="true"
 				header="Requests" showRowCount="true" persistencyKey="SmartTableAnalytical_Explored" enableAutoBinding="true" 
-				class="sapUiResponsiveContentPadding" enableAutoColumnWidth="true" editTogglable="false" app:useSmartToggle="true"
+				class="sapUiResponsiveContentPadding" editTogglable="false" app:useSmartToggle="true"
 				showFullScreenButton="true" showDetailsButton="true" initiallyVisibleFields="Reqid,Status,Begda,Endda,Rsntx,Landx">
 				
 				<Table mode="SingleSelectMaster" selectionChange=".onSelectionChange"></Table>
