--- a/webapp/view/DisplayEdit.fragment.xml
+++ b/webapp/view/DisplayEdit.fragment.xml
@@ -102,6 +102,9 @@
 									<smartForm:GroupElement>
 										<smartField:SmartField value="{Nmdys}" enabled="false" visible="{= !${viewModel>/editable} &amp;&amp; ${Inksa} === 'X' }"/>
 									</smartForm:GroupElement>
+									<smartForm:GroupElement>
+										<smartField:SmartField value="{Bocit}" visible="{= ${Inksa} === 'X' }"/>
+									</smartForm:GroupElement>
 									
 									<smartForm:GroupElement>
 										<smartField:SmartField id="idMarsn" value="{Marsn}"/>
@@ -114,6 +117,10 @@
 									
 									<smartForm:GroupElement>
 										<smartField:SmartField value="{Trdsa}" enabled="false" visible="{= !${viewModel>/editable} &amp;&amp; ${Inksa} === 'X' }"/>
+									</smartForm:GroupElement>
+									
+									<smartForm:GroupElement>
+										<smartField:SmartField value="{Dscit}" visible="{= ${Inksa} === 'X' }"/>
 									</smartForm:GroupElement>
 									
 									<smartForm:GroupElement>
@@ -131,12 +138,7 @@
 										<smartField:SmartField value="{Cclas}" visible="{= ${Inksa} === 'X' }"/>
 									</smartForm:GroupElement>
 									
-									<smartForm:GroupElement>
-										<smartField:SmartField value="{Bocit}" visible="{= ${Inksa} === '' }"/>
-									</smartForm:GroupElement>
-									<smartForm:GroupElement>
-										<smartField:SmartField value="{Dscit}" visible="{= ${Inksa} === '' }"/>
-									</smartForm:GroupElement>
+									
 								</smartForm:Group>
 								<!-- <smartForm:GroupElement>
 										<smartField:SmartField value="{Changedat}"/>
@@ -269,8 +271,12 @@
 					icon="sap-icon://save" type="Emphasized"/>
 				<Button id="cancelButton" text="{i18n>Cancel}" enabled="{= ${viewModel>/editable} }" visible="{= ${viewModel>/editable} }"
 					press=".onCancel" icon="sap-icon://cancel" type="Transparent"/>
+					
 				<Button id="submitButton" text="{i18n>Submit}" enabled="{= !${viewModel>/editable} &amp;&amp; ${Status} === 'NEW' }" 
 					visible="{= !${viewModel>/editable} &amp;&amp; ${Status} === 'NEW' }" press=".onSubmit" icon="sap-icon://complete" type="Accept"/>
+				
+				<!--<Button id="submitButton" text="{i18n>Submit}" press=".onSubmit" icon="sap-icon://complete" type="Accept"/>-->
+					
 			</OverflowToolbar>
 		</uxap:footer>
 	</uxap:ObjectPageLayout>
